# umrt-arm-encoder-driver

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  config.in.cmake  cpack.cmake  dump_all.py  dump_angle.py  dump_info.py  get_angle.py  get_register.py
cpp/: CMakeLists.txt  encoder_interface.cpp  encoder_interface.h  test
cpp/src/: encoder_interface.cpp  encoder_interface.h  main.cpp
include/arm-encoder-driver/: encoder_interface.h  encoder_interface.hpp
include/umrt-arm-encoder-driver/: encoder_interface.hpp
src/: encoder_interface.cpp  main.cpp
